--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="‘인공지능 개발에 필요한 데이터’를 가공하는 사이트입니다." />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>Data labeling</title>
+        <title>bounding box</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
